--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ Date:
     padding-top: 20px;
     color: #ffffff;
     font-family: 'Bebas Neue', cursive;
+    font-size: 1cm;
 }
 
 .section2{ /*DO NOT REMOVE*/
@@ -53,6 +54,7 @@ Date:
     padding-left: 100px;
     color: #ffffff;
     font-family: 'Bebas Neue', cursive;
+    font-size: 0.8cm;
 }
 
 .videoSection{ /*DO NOT REMOVE*/
@@ -66,6 +68,7 @@ Date:
    text-align: center;
    color: #ffffff;
    font-family: 'Bebas Neue', cursive;
+   font-size: 0.5cm;
 }
 
 .footer{ /*DO NOT REMOVE*/
@@ -73,6 +76,8 @@ Date:
     background-color:#1d428a;
     color:#ffffff;
     text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 img{
